--- a/src/app/components/mainpage/mainpage.component.html
+++ b/src/app/components/mainpage/mainpage.component.html
@@ -1,1 +1,15 @@
-<app-table></app-table>
+
+<div class="container">
+    <mat-tab-group mat-align-tabs="center">
+        <mat-tab label="Djuli">
+            <div class="list-wraper">
+                <app-table [wishList]="djuliList"></app-table>
+            </div>
+        </mat-tab>
+        <mat-tab label="Dashi">
+            <div class="list-wraper">
+                <app-table [wishList]="dashiList"></app-table>
+            </div>
+        </mat-tab>
+    </mat-tab-group>
+</div>
