--- a/src/app/components/add-item/add-item.component.html
+++ b/src/app/components/add-item/add-item.component.html
@@ -1,1 +1,10 @@
-<p>add-item works!</p>
+<div class="wraper">
+    <form class="form">
+        <mat-form-field class="form-field" appearance="fill">
+            <input matInput placeholder="Enter your wish to make it come true...">
+        </mat-form-field>
+    </form>
+    <mat-card class="icon">
+        <h4>Add</h4>
+    </mat-card>
+</div>
