--- a/src/app/components/add-item/add-item.component.scss
+++ b/src/app/components/add-item/add-item.component.scss
@@ -2,11 +2,8 @@
     width: 100%;
     height: 60px;
     display: flex;
-    .form{
+    input{
         width: 100%;
-        .form-field{
-            width: 100%;
-        }
     }
     mat-card{
         margin: 0 0 2px 0;
