--- a/src/app/components/table/table.component.scss
+++ b/src/app/components/table/table.component.scss
@@ -1,7 +1,8 @@
 tr{
     display: flex;
+    margin:  0 0 7px 0;
     mat-card{
-        margin: 0 0 2px 0;
+        border: 1px solid rgb(224, 224, 224);
         cursor: pointer;
     }
     .title{
