--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,4 +38,4 @@ $angularExpress-theme: mat.define-light-theme((
 @import '~bootstrap/scss/bootstrap';
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; padding: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
