--- a/src/app/components/add-item/add-item.component.scss
+++ b/src/app/components/add-item/add-item.component.scss
@@ -1,12 +1,24 @@
-.wraper{
-    width: 100%;
-    height: 60px;
+.container{
     display: flex;
-    input{
-        width: 100%;
-    }
-    mat-card{
-        margin: 0 0 2px 0;
-        cursor: pointer;
+    justify-content: center;
+    .wraper{
+        width: 80%;
+        .form{
+            width: 100%;
+            .form-field{
+                width: 100%;
+            }
+        }
+        mat-card{
+            margin: 0 0 2px 0;
+            cursor: pointer;
+            display: flex;
+            justify-content: center;
+        }
+        .addBtn{
+            background-color: rgb(40, 148, 40);
+            width: 100%;
+            color: whitesmoke;
+        }
     }
 }
