--- a/src/app/components/mainpage/mainpage.component.scss
+++ b/src/app/components/mainpage/mainpage.component.scss
@@ -6,12 +6,16 @@
         position: relative;
         top: 50px;
         height: 80%;
+        width: 80%;
+        .slide-container{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 7px 0;
+        }
         .input-wraper{
             width: 100%;
             margin: 7px 0 7px;
-        }
-        .list-wraper{
-            min-width: 400px;
         }
     }
 }
