--- a/src/app/components/table/table.component.scss
+++ b/src/app/components/table/table.component.scss
@@ -1,11 +1,17 @@
-tr{
+.wraper{
     display: flex;
-    margin:  0 0 7px 0;
-    mat-card{
-        border: 1px solid rgb(224, 224, 224);
-        cursor: pointer;
-    }
-    .title{
-        width: 100%;
+    flex-direction: column-reverse;
+    align-items: center;
+    .item-container{
+        display: flex;
+        width: 95%;
+        margin:  0 0 7px 0;
+        mat-card{
+            border: 1px solid rgb(224, 224, 224);
+            cursor: pointer;
+        }
+        .title{
+            width: 100%;
+        }
     }
 }
