--- a/src/app/components/mainpage/mainpage.component.scss
+++ b/src/app/components/mainpage/mainpage.component.scss
@@ -8,6 +8,7 @@
         height: 80%;
         width: 80%;
         .slide-container{
+            height: 15px;
             display: flex;
             justify-content: center;
             align-items: center;
