--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -3,7 +3,7 @@
     <mat-card class="title" (click)="go(x.link)">
       <h4>{{ x.title }}</h4>
     </mat-card>
-    <mat-card class="icon" (click)="delete(x.wishId)">
+    <mat-card class="icon" (click)="delete(x)">
       <span class="material-icons">clear</span>
     </mat-card>
   </div>
