--- a/src/app/components/mainpage/mainpage.component.html
+++ b/src/app/components/mainpage/mainpage.component.html
@@ -3,23 +3,35 @@
     <mat-card class="box-shadow" style="padding: 0;">
         <mat-tab-group mat-align-tabs="center" style="padding: 0;">
             <mat-tab label="Djuli">
-                <div class="slide-container">
-                    <mat-slide-toggle [(ngModel)]="isAddModeDjuli">Slide me to add!</mat-slide-toggle>
-                </div>
-                <div class="input-wraper" *ngIf="isAddModeDjuli">
-                    <app-add-item [user]="userDjuli" (addedObjectChanged)="addedObjectHandler($event)"></app-add-item>
-                </div>
+                <mat-accordion>
+                    <mat-expansion-panel hideToggle>
+                        <mat-expansion-panel-header>
+                        <mat-panel-description class="panel">
+                            Add Wishes
+                        </mat-panel-description>
+                        </mat-expansion-panel-header>
+                        <div class="input-wraper">
+                            <app-add-item [user]="userDjuli" (addedObjectChanged)="addedObjectHandler($event)"></app-add-item>
+                        </div>
+                    </mat-expansion-panel>
+                </mat-accordion>
                 <div class="list-wraper">
                     <app-table [wishList]="djuliList"></app-table>
                 </div>
             </mat-tab>
             <mat-tab label="Dashi">
-                <div class="slide-container">
-                    <mat-slide-toggle color='primary' [(ngModel)]="isAddModeDashi">Slide me to add!</mat-slide-toggle>
-                </div>
-                <div class="input-wraper" *ngIf="isAddModeDashi">
-                    <app-add-item [user]="userDashi" (addedObjectChanged)="addedObjectHandler($event)"></app-add-item>
-                </div>
+                <mat-accordion>
+                    <mat-expansion-panel hideToggle>
+                        <mat-expansion-panel-header>
+                            <mat-panel-description class="panel">
+                                Add Wishes
+                            </mat-panel-description>
+                        </mat-expansion-panel-header>
+                        <div class="input-wraper">
+                            <app-add-item [user]="userDashi" (addedObjectChanged)="addedObjectHandler($event)"></app-add-item>
+                        </div>
+                    </mat-expansion-panel>
+                </mat-accordion>
                 <div class="list-wraper">
                     <app-table [wishList]="dashiList"></app-table>
                 </div>
