--- a/src/app/components/mainpage/mainpage.component.scss
+++ b/src/app/components/mainpage/mainpage.component.scss
@@ -2,17 +2,16 @@
     min-height: 90vh;
     display: flex;
     justify-content: center;
+    padding: 0 0 15vh 0;
     .box-shadow{
         position: relative;
         top: 50px;
         height: 80%;
         width: 80%;
-        .slide-container{
-            height: 15px;
+        .panel{
             display: flex;
             justify-content: center;
             align-items: center;
-            margin: 7px 0;
         }
         .input-wraper{
             width: 100%;
