--- a/src/app/components/table/table.component.scss
+++ b/src/app/components/table/table.component.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column-reverse;
     align-items: center;
+    padding: 10px 0 10px 0;
     .item-container{
         display: flex;
         width: 95%;
