--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -1,5 +1,5 @@
 <h1>Sure?</h1>
 <mat-dialog-actions>
     <button mat-button mat-dialog-close>Cancel</button>
-    <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Delete</button>
+    <button mat-button [mat-dialog-close]="true" cdkFocusInitial class="deleteBtn" color="warn">Delete</button>
   </mat-dialog-actions>
