--- a/src/app/components/mainpage/mainpage.component.html
+++ b/src/app/components/mainpage/mainpage.component.html
@@ -1,41 +1,46 @@
-
 <div class="container">
-    <mat-card class="box-shadow" style="padding: 0;">
-        <mat-tab-group mat-align-tabs="center" style="padding: 0;">
-            <mat-tab label="Djuli">
-                <mat-accordion>
-                    <mat-expansion-panel hideToggle>
-                        <mat-expansion-panel-header>
-                        <mat-panel-description class="panel">
-                            Add Wishes
-                        </mat-panel-description>
-                        </mat-expansion-panel-header>
-                        <div class="input-wraper">
-                            <app-add-item [user]="userDjuli" (addedObjectChanged)="addedObjectHandler($event)"></app-add-item>
-                        </div>
-                    </mat-expansion-panel>
-                </mat-accordion>
-                <div class="list-wraper">
-                    <app-table [wishList]="djuliList"></app-table>
-                </div>
-            </mat-tab>
-            <mat-tab label="Dashi">
-                <mat-accordion>
-                    <mat-expansion-panel hideToggle>
-                        <mat-expansion-panel-header>
-                            <mat-panel-description class="panel">
-                                Add Wishes
-                            </mat-panel-description>
-                        </mat-expansion-panel-header>
-                        <div class="input-wraper">
-                            <app-add-item [user]="userDashi" (addedObjectChanged)="addedObjectHandler($event)"></app-add-item>
-                        </div>
-                    </mat-expansion-panel>
-                </mat-accordion>
-                <div class="list-wraper">
-                    <app-table [wishList]="dashiList"></app-table>
-                </div>
-            </mat-tab>
-        </mat-tab-group>
-    </mat-card>
+  <mat-card class="box-shadow" style="padding: 0">
+    <mat-tab-group mat-align-tabs="center" style="padding: 0">
+      <mat-tab label="Djuli">
+        <mat-accordion>
+          <mat-expansion-panel hideToggle>
+            <mat-expansion-panel-header>
+              <mat-panel-description class="panel">
+                Add Wishes
+              </mat-panel-description>
+            </mat-expansion-panel-header>
+            <div class="input-wraper">
+              <app-add-item
+                [user]="userDjuli"
+                (addedObjectChanged)="addedObjectHandler($event)"
+              ></app-add-item>
+            </div>
+          </mat-expansion-panel>
+        </mat-accordion>
+        <div class="list-wraper">
+          <app-table [wishList]="djuliList"></app-table>
+        </div>
+      </mat-tab>
+      <mat-tab label="Dashi">
+        <mat-accordion>
+          <mat-expansion-panel hideToggle>
+            <mat-expansion-panel-header>
+              <mat-panel-description class="panel">
+                Add Wishes
+              </mat-panel-description>
+            </mat-expansion-panel-header>
+            <div class="input-wraper">
+              <app-add-item
+                [user]="userDashi"
+                (addedObjectChanged)="addedObjectHandler($event)"
+              ></app-add-item>
+            </div>
+          </mat-expansion-panel>
+        </mat-accordion>
+        <div class="list-wraper">
+          <app-table [wishList]="dashiList"></app-table>
+        </div>
+      </mat-tab>
+    </mat-tab-group>
+  </mat-card>
 </div>
