radio buttons added. / wish interface changed.

--- a/src/app/components/add-item/add-item.component.html
+++ b/src/app/components/add-item/add-item.component.html
@@ -24,6 +24,13 @@
           getErrorMessage("link")
         }}</mat-error>
       </mat-form-field>
+      <mat-radio-group class="category-container" formControlName="category">
+        <div *ngFor="let x of categories">
+          <mat-radio-button value="{{ x }}">{{
+            x | titlecase
+          }}</mat-radio-button>
+        </div>
+      </mat-radio-group>
     </form>
     <button mat-button type="submit" (click)="addItem()" class="addBtn">
       Add
