--- a/src/app/components/add-item/add-item.component.scss
+++ b/src/app/components/add-item/add-item.component.scss
@@ -10,6 +10,11 @@
           width: 100%;
         }
       }
+      .category-container{
+        display: flex;
+        justify-content: space-evenly;
+        padding: 0 0 10px 0;
+      }
     }
     .addBtn {
       background-color: rgb(40, 148, 40);
