--- a/src/app/components/table/table.component.scss
+++ b/src/app/components/table/table.component.scss
@@ -3,6 +3,12 @@
   flex-direction: column-reverse;
   align-items: center;
   padding: 10px 0 10px 0;
+  .list-wrapper{
+    width: 100%;
+  }
+  mat-accordion{
+    width: 100%;
+  }
   .item-container {
     display: flex;
     width: 95%;
