--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,10 +1,21 @@
-<div class="wraper">
-  <div class="item-container" *ngFor="let x of wishList">
-    <mat-card class="title" (click)="go(x.link)">
-      <h4>{{ x.title }}</h4>
-    </mat-card>
-    <mat-card class="icon" (click)="openDialog(x._id)">
-      <span class="material-icons">clear</span>
-    </mat-card>
-  </div>
-</div>
+<mat-accordion *ngFor="let x of categories">
+  <mat-expansion-panel>
+    <mat-expansion-panel-header>
+      <mat-panel-description class="panel">
+        {{ x | titlecase }}
+      </mat-panel-description>
+    </mat-expansion-panel-header>
+    <div class="wraper">
+      <div class="list-wrapper" *ngFor="let y of wishList">
+        <div *ngIf="x == y.category" class="item-container">
+          <mat-card class="title" (click)="go(y.link)">
+            <h4>{{ y.title }}</h4>
+          </mat-card>
+          <mat-card class="icon" (click)="openDialog(y._id)">
+            <span class="material-icons">clear</span>
+          </mat-card>
+        </div>
+      </div>
+    </div>
+  </mat-expansion-panel>
+</mat-accordion>
