Code refactoring. / add item component moved to table component.

--- a/src/app/components/table/table.component.scss
+++ b/src/app/components/table/table.component.scss
@@ -1,3 +1,8 @@
+.add-item-panel {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .wraper {
   display: flex;
   flex-direction: column-reverse;
