--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,7 +1,23 @@
+<mat-accordion>
+  <mat-expansion-panel hideToggle>
+    <mat-expansion-panel-header>
+      <mat-panel-description class="add-item-panel">
+        Add Wishes
+      </mat-panel-description>
+    </mat-expansion-panel-header>
+    <div class="input-wraper">
+      <app-add-item
+        [user]="user"
+        (addedObjectChanged)="addedObjectHandler($event)"
+      ></app-add-item>
+    </div>
+  </mat-expansion-panel>
+</mat-accordion>
+
 <mat-accordion *ngFor="let x of categories">
   <mat-expansion-panel>
     <mat-expansion-panel-header>
-      <mat-panel-description class="panel">
+      <mat-panel-description class="category-panel">
         {{ x | titlecase }}
       </mat-panel-description>
     </mat-expansion-panel-header>
