--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,7 +36,7 @@ $angularExpress-theme: mat.define-light-theme(
 
 /* You can add global styles to this file, and also import other style files */
 /* Importing Bootstrap SCSS file. */
-@import "~bootstrap/scss/bootstrap";
+@import "bootstrap/scss/bootstrap";
 
 html,
 body {
